--- a/index.html
+++ b/index.html
@@ -99,6 +99,11 @@ pdf version of CV: <a href="https://www.dropbox.com/s/iak1jd1v74tbqa0/SangEun_Ha
 <br>
 TA class materials: <a href="taclass.html">here</a>
 <br><br>
+Articles related to my works: <br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://webzine.kps.or.kr/contents/data/webzine/webzine/15717908831.pdf">Physics & High Technology 2019 <b>09</b> (KPS Webzine, in Korean)</a>
+<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://kaistcompass.kaist.ac.kr/?issues=fall-2019&magazine=studies-of-an-emergent-anisotropic-non-fermi-liquid-at-a-topological-phase-transition-in-three-dimensions">KAIST Compass 2019 Fall (Newsletter of College of Natural Science)</a>
+<br><br>
 <!--Blog: <a href="/blog/">here</a>--!>
 <!-- Academic Affiliations 
 -->
@@ -142,14 +147,14 @@ TA class materials: <a href="taclass.html">here</a>
 <!-- Scholarships --><br>
 	<div>
 	<div class="cvitemize"> Scholarships </div>
-		<ul><li>
+		<ul><li><div>
+		<span class="cvitem"> Scholarship</span> of Center for Theoretical Physics of the Universe, IBS
+		<span class="cvperiod">March 2014 ~ June 2015</span>		
+		</div>
+		</li><li>
 		<div>
 		<span class="cvitem"> Academic Scholarship</span> in Hankuk University of Foreign Studies
 		<span class="cvperiod">2006 Fall ~ 2008 Spring</span>		
-		</div>
-		</li><li><div>
-		<span class="cvitem"> Scholarship</span> of Center for Theoretical Physics of the Universe, IBS
-		<span class="cvperiod">March 2014 ~ June 2015</span>		
 		</div>
 		</li></ul>
 	</div>
@@ -233,7 +238,7 @@ TA class materials: <a href="taclass.html">here</a>
 	<div class="cvitemize"> Research Interests </div>
 		<ul>
 		<li><div class="cvitemcontent"> 
-Theotical Physics, Condensed matter physics, Strongly correlated systems, Theoretical particle physics, Quantum field theory, Mathematical physics, Statistical physics (equilibrium or non-equilibrium), Quantum spin liquids, Quantum chaos, SYK physics, etc.</div></li></ul>
+Theotical Physics, Condensed matter physics, Strongly correlated systems, Theoretical particle physics, Quantum field theory, Mathematical physics, Statistical physics (equilibrium or non-equilibrium), Quantum spin liquids, Quantum chaos, SYK physics, Non-Fermi liquids, Non-Hermitian systems, Flat bands, etc.</div></li></ul>
 	</div>
 <!-- Teaching Experiences --><br>
 	<div>
@@ -295,6 +300,12 @@ Theotical Physics, Condensed matter physics, Strongly correlated systems, Theore
 		</li></ul></ul>
 	</div><div class="cvitemize"> Contributed Talks and Posters </div>
 		<ul><li><div>
+		<span class="cvitem"> 2019 KPS Fall Meeting (Talk) </span>
+		<span class="cvperiod">October 2019</span>
+		</div>
+		<div class="cvitemcontent"> <a href="https://www.kps.or.kr/abstract/view.html?cid=KPS2019B&article_no=685">"Quantum criticalities with lattice vibrations"</a> </div>	
+
+		</li><li><div>
 		<span class="cvitem"> APS March Meeting 2019 (Talk) </span>
 		<span class="cvperiod">March 2019</span>
 		</div>
@@ -332,6 +343,14 @@ Theotical Physics, Condensed matter physics, Strongly correlated systems, Theore
 		<span class="cvperiod">April 2017</span>
 		</div>
 		<div class="cvitemcontent"> <a href="http://www.kps.or.kr/abstract/view.html?cid=KPS2018A&article_no=565">"Topological Phase Transitions in Dirac semi-metals of distorted spinels"</a> </div>	
+
+		</li>
+		<li><div>
+		<span class="cvitem"> IBSPCS-KIAS International Workshop Frustrated Magnetism (Poster) </span>
+		<span class="cvperiod">October 2019</span>
+		</div>
+		<div class="cvitemcontent"> <a href="https://pcs.ibs.re.kr/PCS_Workshops/FruMag_PC.html">"
+Quantum criticalities with lattice vibrations"</a> </div>	
 
 		</li>
 		<li><div>
@@ -413,7 +432,7 @@ KIAS workshop on Topology and Correlation (Poster) </span>
 		</li></ul></ul>
 	</div>
 	
-<div style="font-size:75%" id="last">since 2014-12-31 / last update 2019-09-26</div>
+<div style="font-size:75%" id="last">since 2014-12-31 / last update 2019-10-31</div>
 
 </div>
 </body>
