--- a/index.html
+++ b/index.html
@@ -99,11 +99,13 @@ pdf version of CV: <a href="https://www.dropbox.com/s/iak1jd1v74tbqa0/SangEun_Ha
 <br>
 TA class materials: <a href="taclass.html">here</a>
 <br><br>
-Articles related to my works: <br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://webzine.kps.or.kr/contents/data/webzine/webzine/15717908831.pdf">Physics & High Technology 2019 <b>09</b> (KPS Webzine, in Korean)</a>
+Articles related to my works:
 <br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://kaistcompass.kaist.ac.kr/?issues=fall-2019&magazine=studies-of-an-emergent-anisotropic-non-fermi-liquid-at-a-topological-phase-transition-in-three-dimensions">KAIST Compass 2019 Fall (Newsletter of College of Natural Science)</a>
-<br><br>
+<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://webzine.kps.or.kr/contents/data/webzine/webzine/15717908831.pdf">Physics & High Technology 2019 <b>09</b> (KPS Webzine, in Korean)</a><br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://physics.kaist.ac.kr/?module=file&act=procFileDownload&file_srl=10035&sid=5161bc5f73a28975817be2598ff36c06&module_srl=5863">KAIST Department of Physics Newsletter Fall 2018, Vol. 07</a><br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://physics.kaist.ac.kr/?module=file&act=procFileDownload&file_srl=8883&sid=76fbd0b673404c756b4a634cbf4bb98a&module_srl=5863">KAIST Department of Physics Newsletter Autumn 2017, Vol. 05</a><br><br>
 <!--Blog: <a href="/blog/">here</a>--!>
 <!-- Academic Affiliations 
 -->
@@ -342,7 +344,7 @@ Theotical Physics, Condensed matter physics, Strongly correlated systems, Theore
 		<span class="cvitem"> 2017 KPS Spring Meeting (Talk) </span>
 		<span class="cvperiod">April 2017</span>
 		</div>
-		<div class="cvitemcontent"> <a href="http://www.kps.or.kr/abstract/view.html?cid=KPS2018A&article_no=565">"Topological Phase Transitions in Dirac semi-metals of distorted spinels"</a> </div>	
+		<div class="cvitemcontent"> <a href="2017_KPS_Spring_Meeting_SE_Han_abstract.pdf">"Topological Phase Transitions in Dirac semi-metals of distorted spinels"</a> </div>	
 
 		</li>
 		<li><div>
@@ -432,7 +434,7 @@ KIAS workshop on Topology and Correlation (Poster) </span>
 		</li></ul></ul>
 	</div>
 	
-<div style="font-size:75%" id="last">since 2014-12-31 / last update 2019-10-31</div>
+<div style="font-size:75%" id="last">since 2014-12-31 / last update 2019-11-04</div>
 
 </div>
 </body>
