--- a/index.html
+++ b/index.html
@@ -99,13 +99,16 @@ pdf version of CV: <a href="https://www.dropbox.com/s/iak1jd1v74tbqa0/SangEun_Ha
 <br>
 TA class materials: <a href="taclass.html">here</a>
 <br><br>
+<a href="https://arxiv.org/find/all/1/au:+han_sangeun/0/1/0/all/0/1">Publications on arXiv</a><br>
+<a href="http://inspirehep.net/search?p=exactauthor:S.Han.7&sf=earliestdate">Publications on INSPIRE</a>
+<br><br>
 Articles related to my works:
 <br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://kaistcompass.kaist.ac.kr/?issues=fall-2019&magazine=studies-of-an-emergent-anisotropic-non-fermi-liquid-at-a-topological-phase-transition-in-three-dimensions">KAIST Compass 2019 Fall (Newsletter of College of Natural Science)</a>
 <br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://webzine.kps.or.kr/contents/data/webzine/webzine/15717908831.pdf">Physics & High Technology 2019 <b>09</b> (KPS Webzine, in Korean)</a><br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://physics.kaist.ac.kr/?module=file&act=procFileDownload&file_srl=10035&sid=5161bc5f73a28975817be2598ff36c06&module_srl=5863">KAIST Department of Physics Newsletter Fall 2018, Vol. 07</a><br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://physics.kaist.ac.kr/?module=file&act=procFileDownload&file_srl=8883&sid=76fbd0b673404c756b4a634cbf4bb98a&module_srl=5863">KAIST Department of Physics Newsletter Autumn 2017, Vol. 05</a><br><br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://physics.kaist.ac.kr/?module=file&act=procFileDownload&file_srl=10035&sid=5161bc5f73a28975817be2598ff36c06&module_srl=5863">KAIST Department of Physics Newsletter Fall 2018, Vol. 07 (in Korean)</a><br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://physics.kaist.ac.kr/?module=file&act=procFileDownload&file_srl=8883&sid=76fbd0b673404c756b4a634cbf4bb98a&module_srl=5863">KAIST Department of Physics Newsletter Autumn 2017, Vol. 05 (in Korean)</a><br><br>
 <!--Blog: <a href="/blog/">here</a>--!>
 <!-- Academic Affiliations 
 -->
