--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ a:hover {text-decoration: underline; color: darkgray;}
 <a href="http://physics.kaist.ac.kr/">Department of Physics</a><br>
 <a href="http://www.kaist.ac.kr/">Korea Advanced Institute of Science and Technology (KAIST)</a></span></div>
 <br>
-pdf version of CV: <a href="https://www.dropbox.com/s/iak1jd1v74tbqa0/SangEun_Han_CV.pdf?dl=0">here</a>
+pdf version of CV: <a href="SangEun_Han_Curriculum_Vitae.pdf">here</a>
 <br>
 TA class materials: <a href="taclass.html">here</a>
 <br><br>
@@ -212,6 +212,12 @@ Articles related to my works:
 	<div>
 	<div class="cvitemize"> Publication </div>
 		<ul><li><div>
+		<span class="cvitem"> "Lattice vibration as a knob for novel quantum criticality: Emergence of supersymmetry from spin-lattice coupling" </span>
+		<span class="cvperiod"></span>
+		</div>
+		<div class="cvitemcontent"> <b><u>SangEun Han</u></b>, Junhyun Lee, Eun-Gook Moon<br>
+			<a href="https://arxiv.org/abs/1911.01435">arXiv:1911.01435</a>
+		</li><li><div>
 		<span class="cvitem"> "Emergent Anisotropic Non-Fermi Liquid at a Topological Phase Transition in Three Dimensions" </span>
 		<span class="cvperiod"></span>
 		</div>
@@ -243,7 +249,7 @@ Articles related to my works:
 	<div class="cvitemize"> Research Interests </div>
 		<ul>
 		<li><div class="cvitemcontent"> 
-Theotical Physics, Condensed matter physics, Strongly correlated systems, Theoretical particle physics, Quantum field theory, Mathematical physics, Statistical physics (equilibrium or non-equilibrium), Quantum spin liquids, Quantum chaos, SYK physics, Non-Fermi liquids, Non-Hermitian systems, Flat bands, etc.</div></li></ul>
+Theoretical Physics, Condensed matter physics, Strongly correlated systems, Quantum phase transitions, Theoretical particle physics, Quantum field theory, Mathematical physics, Statistical physics (equilibrium or non-equilibrium), Quantum spin liquids, Quantum chaos, SYK physics, Non-Fermi liquids, Non-Hermitian systems, Flat bands, Deconfined Quantum Critical Points, etc.</div></li></ul>
 	</div>
 <!-- Teaching Experiences --><br>
 	<div>
@@ -437,7 +443,7 @@ KIAS workshop on Topology and Correlation (Poster) </span>
 		</li></ul></ul>
 	</div>
 	
-<div style="font-size:75%" id="last">since 2014-12-31 / last update 2019-11-04</div>
+<div style="font-size:75%" id="last">since 2014-12-31 / last update 2019-11-06</div>
 
 </div>
 </body>
