--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@ pdf version of CV: <a href="SangEun_Han_Curriculum_Vitae.pdf">here</a>
 <br>
 TA class materials: <a href="taclass.html">here</a>
 <br><br>
+<a href="https://scholar.google.com/citations?user=Yow78DwAAAAJ">Publications on Google Scholar</a><br>
 <a href="https://arxiv.org/find/all/1/au:+han_sangeun/0/1/0/all/0/1">Publications on arXiv</a><br>
 <a href="http://inspirehep.net/search?p=exactauthor:S.Han.7&sf=earliestdate">Publications on INSPIRE</a>
 <br><br>
