--- a/index.html
+++ b/index.html
@@ -310,7 +310,16 @@ Theoretical Physics, Condensed matter physics, Strongly correlated systems, Quan
 		<div class="cvitemcontent"> Course: General Physics 1 </div>	
 
 		</li></ul></ul>
-	</div><div class="cvitemize"> Contributed Talks and Posters </div>
+	</div>
+	<div class="cvitemize"> Invited Talks </div>
+	<ul><li><div>
+	<span class="cvitem"> KAIST-Weizmann Workshop on Quantum Condensed Matter Physics </span>
+	<span class="cvperiod">December 2019</span>
+	</div>
+	<div class="cvitemcontent"> "Emergence of Supersymmetry from spin-lattice coupling" </div>	
+
+	</li></ul>
+	<div class="cvitemize"> Contributed Talks and Posters </div>
 		<ul><li><div>
 		<span class="cvitem"> 2019 KPS Fall Meeting (Talk) </span>
 		<span class="cvperiod">October 2019</span>
@@ -444,7 +453,7 @@ KIAS workshop on Topology and Correlation (Poster) </span>
 		</li></ul></ul>
 	</div>
 	
-<div style="font-size:75%" id="last">since 2014-12-31 / last update 2019-11-06</div>
+<div style="font-size:75%" id="last">since 2014-12-31 / last update 2019-12-06</div>
 
 </div>
 </body>
