--- a/index 복사본.html
+++ b/index 복사본.html
@@ -7,27 +7,6 @@
 
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 <link rel="icon" href="favicon.ico" type="image/x-icon">
-<!-- png favicon--> 
-<link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
-<link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
-<link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
-<link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
-<link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
-<link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
-<link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
-<link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
-<link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
-<link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-<link rel="manifest" href="/manifest.json">
-<meta name="msapplication-TileColor" content="#ffffff">
-<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
-<meta name="theme-color" content="#ffffff">
-<!-- --> 
-
-
 <style type="text/css">
  @font-face {
   font-family: 'Open Sans';
@@ -102,6 +81,15 @@ a:hover {text-decoration: underline; color: darkgray;}
   ga('send', 'pageview');
 
 </script>
+<style>
+hr { 
+  background: dimgray;
+    height: 1px;
+    border: 0px;
+	margin-top: 0.2em;
+	margin-bottom: 0.2em;
+} 
+</style>
  <link href='//fonts.googleapis.com/css?family=Open+Sans:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
 </head>
 
@@ -253,6 +241,7 @@ Articles related to my works:
 		<span class="cvperiod"></span>
 		</div>
 		<div class="cvitemcontent"> <b><u>SangEun Han</u></b> and Eun-Gook Moon <br><a href="https://doi.org/10.1103/PhysRevB.97.241101">Phys. Rev. B <b>97</b>, 241101(R)</a> (<a href="https://arxiv.org/abs/1802.05727">arXiv:1802.05727</a>)</div>
+		<span id="test2" style="CURSOR: hand" onclick="if(plain2.style.display=='none') {plain2.style.display='';test2.innerText='close summary'} else {plain2.style.display='none';test2.innerText='open summary'}">open summary</span><div id="plain2" style="display: none;"><hr>Chiral symmetry is one of the most fundamental symmetries in nature, which prohibits mass generation of fermions. Remarkable advances in topological matter reveal the chiral symmetry may be realized as lattice symmetries of topological state. A topological phase transition is intrinsically tied to breaking a chiral symmetry. The topological transition, however, is lack of the Lorentz symmetry in contrast to particle physics. Especially, the Coulomb interaction is instantaneous, and it is imperative to understand its effects on chiral symmetry breaking transitions. Thus, we investigate long-range Coulomb interaction effects on topological phase transitions and find striking properties with novel scaling functions.<hr></div>
 		</li><li><div>
 		<span class="cvitem"> "Topological Phase Transitions in Line-nodal Superconductors" </span>
 		<span class="cvperiod"></span>
@@ -341,11 +330,6 @@ Theoretical Physics, Condensed matter physics, Strongly correlated systems, Quan
 	</li></ul>
 	<div class="cvitemize"> Contributed Talks and Posters </div>
 		<ul><li><div>
-		<span class="cvitem"> 12th BK21+ Young Physicists Workshop (Talk) </span>
-		<span class="cvperiod">February 2020</span>
-		</div>
-		<div class="cvitemcontent"> <a href="12th_bk21_plus_YPW.pdf">"Emergence of Supersymmetry from spin-lattice coupling"</a> </div>	
-	</li><li><div>
 		<span class="cvitem"> 2019 KPS Fall Meeting (Talk) </span>
 		<span class="cvperiod">October 2019</span>
 		</div>
