--- a/arxiv/2020_01_arxiv.html
+++ b/arxiv/2020_01_arxiv.html
@@ -119,10 +119,11 @@ a:hover {text-decoration: underline; color: darkgray;}
 <div id="center">
 
 <div id="title">Today's arXiv</div>
-<div id="titlecontent">
+<iframe src="../titlecontent.html" style="width:100%; height:63; border:none"></iframe>
+<!---<div id="titlecontent">
 <span class="cvitemcontent">e-mail: sehan at kaist.ac.kr<br>
 <a href="http://physics.kaist.ac.kr/">Department of Physics</a><br>
-<a href="http://www.kaist.ac.kr/">Korea Advanced Institute of Science and Technology (KAIST)</a></span></div>
+<a href="http://www.kaist.ac.kr/">Korea Advanced Institute of Science and Technology (KAIST)</a></span></div>-->
 <br>
 <p class="p1">20200101</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1912.12308">https://arxiv.org/abs/1912.12308</a></span> Flat bands and nontrivial topological properties in an extended Lieb lattice<span class="Apple-converted-space"> </span></p>
@@ -374,9 +375,10 @@ in symmetry-breaking and topological phase transitions ***(Xiao-Gang Wen)</p>
 <p class="p2"><br></p>
 <p class="p1">20200131</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2001.11188">https://arxiv.org/abs/2001.11188</a></span> Non-Hermitian semi-Dirac semi-metals ***</p>
+	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
-	
-<div style="font-size:75%" id="last">since 2014-12-31 / last update 2019-12-06</div>
+
+<!--<div style="font-size:75%" id="last">since 2014-12-31 / last update 2019-12-06</div>-->
 
 </div>
 </body>
