--- a/index.html
+++ b/index.html
@@ -62,6 +62,12 @@
 -webkit-text-size-adjust:none;
     }
     //-->
+	iframe {
+	    margin: 0px;
+	    padding: 0px;
+	    background: white;
+	    border: none;
+	}
 </style>
 
 <style type="text/css">
@@ -110,10 +116,11 @@ a:hover {text-decoration: underline; color: darkgray;}
 <div id="center">
 
 <div id="title">SangEun Han</div>
-<div id="titlecontent">
+<iframe src="titlecontent.html" style="width:100%; height:63; border:none"></iframe>
+<!---<div id="titlecontent">
 <span class="cvitemcontent">e-mail: sehan at kaist.ac.kr<br>
 <a href="http://physics.kaist.ac.kr/">Department of Physics</a><br>
-<a href="http://www.kaist.ac.kr/">Korea Advanced Institute of Science and Technology (KAIST)</a></span></div>
+<a href="http://www.kaist.ac.kr/">Korea Advanced Institute of Science and Technology (KAIST)</a></span></div>-->
 <br>
 pdf version of CV: <a href="SangEun_Han_Curriculum_Vitae.pdf">here</a>
 <br>
@@ -242,23 +249,28 @@ Articles related to my works:
 		<span class="cvitem"> "Emergent Anisotropic Non-Fermi Liquid at a Topological Phase Transition in Three Dimensions" </span>
 		<span class="cvperiod"></span>
 		</div>
-		<div class="cvitemcontent"> <b><u>SangEun Han</u></b>, Changhee Lee, Eun-Gook Moon, and Hongki Min<br><a href="https://doi.org/10.1103/PhysRevLett.122.187601">Phys. Rev. Lett. <b>122</b>, 187601 </a> (<a href="https://arxiv.org/abs/1809.10691">arXiv:1809.10691</a>)
+		<div class="cvitemcontent"> <b><u>SangEun Han</u></b>, Changhee Lee, Eun-Gook Moon, and Hongki Min<br><a href="https://doi.org/10.1103/PhysRevLett.122.187601">Phys. Rev. Lett. <b>122</b>, 187601 </a> (<a href="https://arxiv.org/abs/1809.10691">arXiv:1809.10691</a>)</div>
+<!--		<span id="quicksummary4" style="CURSOR: hand" onclick="if(expla4.style.display=='none') {expla4.style.display='';quicksummary4.innerText='close quick summary'} else {expla4.style.display='none';quicksummary4.innerText='open quick summary'}">open quick summary</span><div id="expla4" style="display: none;"><hr>We find that a novel class of quantum criticality appears at topological phase transition point characterized by emergent anisotropic non-Fermi liquid behaviors which in critical electronic modes and long-range Coulomb interactions are strongly coupled, and the system becomes finitely anisotropic.<hr></div>-->
 		</li><li><div>
 		<span class="cvitem"> "Quantum criticality with infinite anisotropy in topological phase transitions between Dirac and Weyl semimetals" </span>
 		<span class="cvperiod"></span>
 		</div>
-		<div class="cvitemcontent"> <b><u>SangEun Han</u></b>, Gil Young Cho, and Eun-Gook Moon <br><a href="https://doi.org/10.1103/PhysRevB.98.085149">Phys. Rev. B <b>98</b>, 085149</a> (<a href="https://arxiv.org/abs/1804.01547">arXiv:1804.01547</a>)
+		<div class="cvitemcontent"> <b><u>SangEun Han</u></b>, Gil Young Cho, and Eun-Gook Moon <br><a href="https://doi.org/10.1103/PhysRevB.98.085149">Phys. Rev. B <b>98</b>, 085149</a> (<a href="https://arxiv.org/abs/1804.01547">arXiv:1804.01547</a>)</div>
+<!--		<span id="quicksummary3" style="CURSOR: hand" onclick="if(expla3.style.display=='none') {expla3.style.display='';quicksummary3.innerText='close quick summary'} else {expla3.style.display='none';quicksummary3.innerText='open quick summary'}">open quick summary</span><div id="expla3" style="display: none;"><hr>We study the quantum phase transitions associated with splitting nodal fermi points, motivated by topological phase transitions between Dirac and Weyl semimetals. We show the presence of weakly coupled quantum criticalities with infinite anisotropy.<hr></div>-->
 		</li><li><div>
 		<span class="cvitem"> "Long-range Coulomb Interaction effects on Topological Phase Transitions between Semi-metals and Insulators" </span>
 		<span class="cvperiod"></span>
 		</div>
 		<div class="cvitemcontent"> <b><u>SangEun Han</u></b> and Eun-Gook Moon <br><a href="https://doi.org/10.1103/PhysRevB.97.241101">Phys. Rev. B <b>97</b>, 241101(R)</a> (<a href="https://arxiv.org/abs/1802.05727">arXiv:1802.05727</a>)</div>
+<!--		<span id="quicksummary2" style="CURSOR: hand" onclick="if(expla2.style.display=='none') {expla2.style.display='';quicksummary2.innerText='close quick summary'} else {expla2.style.display='none';quicksummary2.innerText='open quick summary'}">open quick summary</span><div id="expla2" style="display: none;"><hr>Chiral symmetry is one of the most fundamental symmetries in nature, which prohibits mass generation of fermions. Remarkable advances in topological matter reveal the chiral symmetry may be realized as lattice symmetries of topological state. A topological phase transition is intrinsically tied to breaking a chiral symmetry. The topological transition, however, is lack of the Lorentz symmetry in contrast to particle physics. In particular, the Coulomb interaction is instantaneous, and it is imperative to understand its effects on chiral symmetry breaking transitions. Thus, we investigate long-range Coulomb interaction effects on topological phase transitions and find striking properties with novel scaling functions.<hr></div>-->
 		</li><li><div>
 		<span class="cvitem"> "Topological Phase Transitions in Line-nodal Superconductors" </span>
 		<span class="cvperiod"></span>
 		</div>
 		<div class="cvitemcontent"> <b><u>SangEun Han</u></b>, Gil Young Cho, and Eun-Gook Moon <br><a href="https://doi.org/10.1103/PhysRevB.95.094502">Phys. Rev. B <b>95</b>, 094502</a> (<a href="https://arxiv.org/abs/1601.00975">arXiv:1601.00975</a>)</div>
+<!--		<span id="quicksummary1" style="CURSOR: hand" onclick="if(expla1.style.display=='none') {expla1.style.display='';quicksummary1.innerText='close quick summary'} else {expla1.style.display='none';quicksummary1.innerText='open quick summary'}">open quick summary</span><div id="expla1" style="display: none;"><hr>We study the topological phase transition accompanied by the change in the topological nodal structure. The nodal fermionic excitation induces a novel universality class which is characterized by the hyperscaling violation, emergent relativistic scale, and large anomalous dimensions. We propose that the unusual linear phase boundary as a signal of the underlying line-nodal fermions.<hr></div>-->
 		</li><li><div>
+			
 		<span class="cvitem"> "Explaining the Lepton Non-universality at the LHCb and CMS from an Unified Framework" </span>
 		<span class="cvperiod"></span>
 		</div>
@@ -474,12 +486,13 @@ KIAS workshop on Topology and Correlation (Poster) </span>
 		<span class="cvperiod">Feburary 2016</span>
 		</div>
 		<div class="cvitemcontent"> <a href="http://home.kias.re.kr/MKG/h/QMS2016/?pageNo=1812">"Topological Phase Transitions in Line-nodal Superconductors"</a> </div>	
-
 		</li></ul></ul>
+
+		<div class="cvitemize"> Today's arXiv </div> <a href="arxiv/2020_01_arxiv.html">2020/01</a>
+	<iframe src="last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 	
-<div style="font-size:75%" id="last">since 2014-12-31 / last update 2019-12-06</div>
-
+<!---<div style="font-size:75%" id="last">since 2014-12-31 / last update 2019-12-06</div>-->
 </div>
 </body>
 </html>
