--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@ Quantum criticalities with lattice vibrations"</a> </div>
 		<span class="cvitem"> The 19th JAPAN-KOREA-TAIWAN SYMPOSIUM ON STRONGLY CORRELATED ELECTRON SYSTEMS (Poster) </span>
 		<span class="cvperiod">January 2019</span>
 		</div>
-		<div class="cvitemcontent"> <a href="http://www.f.waseda.jp/katsuf/Meeting/JKT19.htm">"Long-range Coulomb Interaction effects on Topological Phase Transitions between Semi-metals and Insulators" / "Emergent Anisotropic Non-Fermi Liquid
+		<div class="cvitemcontent"> <a href="http://www.f.waseda.jp/katsuf/Meeting/JKT19.htm">"Long-range Coulomb Interaction effects on Topological Phase Transitions between Semi-metals and Insulators" /<br> "Emergent Anisotropic Non-Fermi Liquid
 "</a> </div>	
 
 		</li>
@@ -439,7 +439,7 @@ Quantum criticalities with lattice vibrations"</a> </div>
 		<span class="cvitem"> The 1<sup>st</sup> Workshop on Spin-Orbit Coupled Topological States (Poster) </span>
 		<span class="cvperiod">October 2018</span>
 		</div>
-		<div class="cvitemcontent"> <a href="https://www.apctp.org/plan.php/SOCTS2018">"Long-range Coulomb Interaction effects on Topological Phase Transitions between Semi-metals and Insulators" / "Emergent Anisotropic Non-Fermi Liquid
+		<div class="cvitemcontent"> <a href="https://www.apctp.org/plan.php/SOCTS2018">"Long-range Coulomb Interaction effects on Topological Phase Transitions between Semi-metals and Insulators" /<br> "Emergent Anisotropic Non-Fermi Liquid
 "</a> </div>	
 
 		</li>
@@ -447,7 +447,7 @@ Quantum criticalities with lattice vibrations"</a> </div>
 		<span class="cvitem"> Advanced School and Workshop on Correlations in Electron Systems - from Quantum Criticality to Topology - (Poster) </span>
 		<span class="cvperiod">August 2018</span>
 		</div>
-		<div class="cvitemcontent"> <a href="http://indico.ictp.it/event/8330/">"Long-range Coulomb Interaction effects on Topological Phase Transitions between Semi-metals and Insulators" / "Emergent Anisotropic Non-Fermi Liquid
+		<div class="cvitemcontent"> <a href="http://indico.ictp.it/event/8330/">"Long-range Coulomb Interaction effects on Topological Phase Transitions between Semi-metals and Insulators" /<br> "Emergent Anisotropic Non-Fermi Liquid
 "</a> </div>	
 
 		</li>
@@ -455,7 +455,7 @@ Quantum criticalities with lattice vibrations"</a> </div>
 		<span class="cvitem"> International Workshop on "New Paradigms in Quantum Matter 2018" (Poster) </span>
 		<span class="cvperiod">June 2018</span>
 		</div>
-		<div class="cvitemcontent"> <a href="http://npqm.csp.escience.cn/dct/page/1">"Long-range Coulomb Interaction effects on Topological Phase Transitions between Semi-metals and Insulators" / "Emergent Anisotropic Non-Fermi Liquid
+		<div class="cvitemcontent"> <a href="http://npqm.csp.escience.cn/dct/page/1">"Long-range Coulomb Interaction effects on Topological Phase Transitions between Semi-metals and Insulators" /<br> "Emergent Anisotropic Non-Fermi Liquid
 "</a> </div>	
 
 		</li>
