--- a/arxiv/2020_02_arxiv.html
+++ b/arxiv/2020_02_arxiv.html
@@ -224,6 +224,15 @@ a:hover {text-decoration: underline; color: darkgray;}
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2002.05495">https://arxiv.org/abs/2002.05495</a></span> Solitonic in-gap modes in a superconductor-quantum antiferromagnet interface<span class="Apple-converted-space"> </span></p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2002.05203">https://arxiv.org/abs/2002.05203</a></span> The attractive Hubbard model as an SO(3) system of competing phases: supersolid order and its thermal melting<span class="Apple-converted-space"> </span></p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1912.00305">https://arxiv.org/abs/1912.00305</a></span> Deconfinement and chiral phase transitions in quark matter with a strong electric field<span class="Apple-converted-space"> </span></p>
+<p class="p1"><br></p>
+<p class="p2">20200217</p>
+<p class="p2"><span class="s1"><a href="https://arxiv.org/abs/2002.05713">https://arxiv.org/abs/2002.05713</a></span> Logarithmic Negativity in Quantum Lifshitz Theories<span class="Apple-converted-space"> </span></p>
+<p class="p2"><span class="s1"><a href="https://arxiv.org/abs/2002.05916">https://arxiv.org/abs/2002.05916</a></span> Jump in the c66 shear modulus at the superconducting transition of Sr2RuO4: Evidence for a two-component order parameter ***</p>
+<p class="p2"><span class="s1"><a href="https://arxiv.org/abs/2002.05732">https://arxiv.org/abs/2002.05732</a></span> Bosonization of the Q = 0 continuum of Dirac Fermions<span class="Apple-converted-space"> </span></p>
+<p class="p2"><span class="s1"><a href="https://arxiv.org/abs/2002.06013">https://arxiv.org/abs/2002.06013</a></span> Aharonov-Bohm instability in fermionic Z2 gauge theories: topological order and soliton-induced deconfinement ***</p>
+<p class="p2"><span class="s1"><a href="https://arxiv.org/abs/2002.05725">https://arxiv.org/abs/2002.05725</a></span> Many-Body Chaos in the Sachdev-Ye-Kitaev Model *** (SYK model)</p>
+<p class="p2"><span class="s1"><a href="https://arxiv.org/abs/2002.05997">https://arxiv.org/abs/2002.05997</a></span> BRST, Ward identities, gauge dependence and FRG<span class="Apple-converted-space"> </span></p>
+<p class="p3"><a href="https://arxiv.org/abs/2002.06131">https://arxiv.org/abs/2002.06131</a><span class="s2"> Perturbative BF theory<span class="Apple-converted-space"> </span></span></p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
