--- a/arxiv/2020_02_arxiv.html
+++ b/arxiv/2020_02_arxiv.html
@@ -225,14 +225,26 @@ a:hover {text-decoration: underline; color: darkgray;}
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2002.05203">https://arxiv.org/abs/2002.05203</a></span> The attractive Hubbard model as an SO(3) system of competing phases: supersolid order and its thermal melting<span class="Apple-converted-space"> </span></p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1912.00305">https://arxiv.org/abs/1912.00305</a></span> Deconfinement and chiral phase transitions in quark matter with a strong electric field<span class="Apple-converted-space"> </span></p>
 <p class="p1"><br></p>
-<p class="p2">20200217</p>
-<p class="p2"><span class="s1"><a href="https://arxiv.org/abs/2002.05713">https://arxiv.org/abs/2002.05713</a></span> Logarithmic Negativity in Quantum Lifshitz Theories<span class="Apple-converted-space"> </span></p>
-<p class="p2"><span class="s1"><a href="https://arxiv.org/abs/2002.05916">https://arxiv.org/abs/2002.05916</a></span> Jump in the c66 shear modulus at the superconducting transition of Sr2RuO4: Evidence for a two-component order parameter ***</p>
-<p class="p2"><span class="s1"><a href="https://arxiv.org/abs/2002.05732">https://arxiv.org/abs/2002.05732</a></span> Bosonization of the Q = 0 continuum of Dirac Fermions<span class="Apple-converted-space"> </span></p>
-<p class="p2"><span class="s1"><a href="https://arxiv.org/abs/2002.06013">https://arxiv.org/abs/2002.06013</a></span> Aharonov-Bohm instability in fermionic Z2 gauge theories: topological order and soliton-induced deconfinement ***</p>
-<p class="p2"><span class="s1"><a href="https://arxiv.org/abs/2002.05725">https://arxiv.org/abs/2002.05725</a></span> Many-Body Chaos in the Sachdev-Ye-Kitaev Model *** (SYK model)</p>
-<p class="p2"><span class="s1"><a href="https://arxiv.org/abs/2002.05997">https://arxiv.org/abs/2002.05997</a></span> BRST, Ward identities, gauge dependence and FRG<span class="Apple-converted-space"> </span></p>
-<p class="p3"><a href="https://arxiv.org/abs/2002.06131">https://arxiv.org/abs/2002.06131</a><span class="s2"> Perturbative BF theory<span class="Apple-converted-space"> </span></span></p>
+<p class="p1">20200217</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2002.05713.pdf">https://arxiv.org/pdf/2002.05713.pdf</a></span> Logarithmic Negativity in Quantum Lifshitz Theories<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2002.05916.pdf">https://arxiv.org/pdf/2002.05916.pdf</a></span> Jump in the c66 shear modulus at the superconducting transition of Sr2RuO4: Evidence for a two-component order parameter ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2002.05732.pdf">https://arxiv.org/pdf/2002.05732.pdf</a></span> Bosonization of the Q = 0 continuum of Dirac Fermions<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2002.06013.pdf">https://arxiv.org/pdf/2002.06013.pdf</a></span> Aharonov-Bohm instability in fermionic Z2 gauge theories: topological order and soliton-induced deconfinement ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2002.05725.pdf">https://arxiv.org/pdf/2002.05725.pdf</a></span> Many-Body Chaos in the Sachdev-Ye-Kitaev Model *** (SYK model)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2002.05997.pdf">https://arxiv.org/pdf/2002.05997.pdf</a></span> BRST, Ward identities, gauge dependence and FRG<span class="Apple-converted-space"> </span></p>
+<p class="p2"><a href="https://arxiv.org/pdf/2002.06131.pdf">https://arxiv.org/pdf/2002.06131.pdf</a><span class="s2"> Perturbative BF theory<span class="Apple-converted-space"> </span></span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2002.05759.pdf">https://arxiv.org/pdf/2002.05759.pdf</a></span> Quantum Chaos of Unitary Fermi Gases in Strong Pairing Fluctuation Region *** (Quantum chaos in BCS)</p>
+<p class="p3"><br></p>
+<p class="p1">20200218</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2002.06292.pdf">https://arxiv.org/pdf/2002.06292.pdf</a></span> Disorder and magnetoconductivity in tilted Weyl semimetals<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2002.06767.pdf">https://arxiv.org/pdf/2002.06767.pdf</a></span> Gram Matrices, Coherent States, and Hofstadter Butterfly with Flat Band<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2002.06942.pdf">https://arxiv.org/pdf/2002.06942.pdf</a></span> PSEUDO-CRITICAL BEHAVIOR OF SPIN-1/2 ISING DIAMOND AND TETRAHEDRAL CHAINS<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2002.06891.pdf">https://arxiv.org/pdf/2002.06891.pdf</a></span> Emergence of d ± ip-wave superconducting state at the edge of d-wave superconductors mediated by Andreev-bound-state-driven ferromagnetic fluctuations ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2002.06458.pdf">https://arxiv.org/pdf/2002.06458.pdf</a></span> Theory of nonreciprocal Josephson effect *** (Naoto Nagaosa)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2002.06721.pdf">https://arxiv.org/pdf/2002.06721.pdf</a></span> How many surface modes does one see on the boundary of a Dirac material?<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/1709.08657.pdf">https://arxiv.org/pdf/1709.08657.pdf</a></span> Operads for algebraic quantum field theory<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2002.04313.pdf">https://arxiv.org/pdf/2002.04313.pdf</a></span> Remarks on Replica Method and Sachdev-Ye-Kitaev Model *** (SYK model)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/1905.11556.pdf">https://arxiv.org/pdf/1905.11556.pdf</a></span> On Z2-indices for ground states of fermionic chains<span class="Apple-converted-space"> </span></p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
